Added player profile windows

--- a/root/index.html
+++ b/root/index.html
@@ -8,7 +8,8 @@
 
 	<!-- Load Google Font -->
 	<!-- <link href='https://fonts.googleapis.com/css?family=Roboto:100,400,300,400italic,700' rel='stylesheet' type='text/css'> -->
-	<link href='https://fonts.googleapis.com/css?family=IM+Fell+Double+Pica+SC' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=IM+Fell+Double+Pica+SC&effect=outline' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans&effect=outline' rel='stylesheet' type='text/css'>
 
 	<!-- CSS libraries -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -34,8 +35,8 @@
 
 	<section class="hero" id="top">
 		<div class="row intro">
-			<h1>Learn from the Pros</h1>
-			<h3>Improve your play and climb the ladder by learning from high ELO players!</h3>
+			<h1 class="font-effect-outline">Learn from the Pros</h1>
+			<h3 class="font-effect-outline">Improve your play and climb the ladder by learning from high ELO players!</h3>
 		</div>
 	</section>
 
@@ -53,7 +54,108 @@
 		</div>
 	</div>
 
- <!-- The main page content (just filler for this demo) -->
+	<div id="player-profile-header">
+		<h1>Player Profiles</h1>
+		<h5>Click on a description for a link to a complete player profile</h5>
+	</div>
+
+	<hr class="prof-sep">
+
+	<div id="wrapper">
+		<div id="columns">
+			<a href="#top" class="smoothScroll">
+				<div class="pin">
+					<img src="img/double.jpg" />
+					<p>
+						Doublelift is an AD carry who currently plays for Team Solo Mid. Widely regarded as one of the world's best, Doublelift is also noted for his controversial personality - he loves to make matchups more exciting by trash-talking.
+					</p>
+				</div>
+			</a>
+		
+			<a href="#top" class="smoothScroll">
+				<div class="pin">
+					<img src="img/sneaky.jpg" />
+					<p>
+						Sneaky currently plays AD carry for Cloud 9, an NA team that enjoyed great success their first year in the LCS. Sneaky doesn't pander much to the media, but says all that needs to be said through his continually dominant performance as one of the strongest ADCs in NA.
+					</p>
+				</div>
+			</a>
+		
+			<a href="#top" class="smoothScroll">
+				<div class="pin">
+					<img src="img/bjergsen.jpg" />
+					<p>
+						Bjergsen, the Danish import who moved from the Copenhagen Wolves to Team Solo Mid in 2014, has been widely heralded as one of the best midlaners in the world. His aggressive playstyle and tendency to dominate midlane across a variety of lane matchups has earned him a reputation for strong showings on assassins such as Zed and Leblanc.
+					</p>
+				</div>
+			</a>
+		
+			<a href="#top" class="smoothScroll">
+				<div class="pin">
+					<img src="img/huni.jpeg" />
+					<p>
+						After starting his career at Samsung in the Korean LCK, Huni moved to Europe where he enjoyed a wildly successful 2015 Season with Fnatic. After a strong run at worlds, Fnatic disbanded and Huni found himself once again relocated, this time to a fledgling Immortals team in North America.
+					</p>
+				</div>
+			</a>
+		
+			<a href="#top" class="smoothScroll">
+				<div class="pin">
+					<img src="img/darshan.jpg" />
+					<p>
+						Darshan (sometimes better known by his old alias, ZionSpartan) currently plays for CLG. He was one of the first players to popularize the top lane carry meta which has since been replaced largely by tanks. Every once in a while he will still be seen playing his signature champions such as Jax and Nasus.
+					</p>
+				</div>
+			</a>
+		
+			<a href="#top" class="smoothScroll">
+				<div class="pin">
+					<img src="img/rush.jpg" />
+					<p>
+						Rush moved from Korea to join Cloud 9 and was met with awe as he climbed to the very top of the NA solo queue ladder within the first week, abusing is absurdly aggressive early game on champions such as Lee Sin and Nidalee. He has been a successful replacement for Cloud 9's popular jungler Meteos, who retired last year.
+					</p>
+				</div>
+			</a>
+			
+			<a href="#top" class="smoothScroll">
+				<div class="pin">
+					<img src="img/wildTurtle.jpg" />
+					<p>
+						WildTurtle received harsh criticism towards the end of the 2015 split. Many believed that he had underperformed compared to the rest of Team Solo Mid. His move to Immortals in 2016 turned out to be exactly the right move to silence those critics. Since the move he has been an integral part of the Immortal's 17-1 2016 spring split.
+					</p>
+				</div>
+			</a>
+		
+			<a href="#top" class="smoothScroll">
+				<div class="pin">
+					<img src="img/impact.jpg" />
+					<p>
+						After winning the world championship with Korean giants SK Telecom in 2014, Impact moved to North American Team Impulse. Despite TIP's moderate success, Impact decided to stay in NA after the 2015 season and now plays with new team NRG eSports. Despite consistent strong performances on carry top laners (most notably Fiora), Impact has been criticized for his failure to smoothly transition into the tank meta that we have seen since the start of the 2016 season.
+					</p>
+				</div>
+			</a>
+		
+			<a href="#top" class="smoothScroll">
+				<div class="pin">
+					<img src="img/piglet.jpg" />
+					<p>
+						A former teammate of Impact on SK Telecom, Piglet followed Impact's lead and moved to North America after the dissolution of the team. Piglet is one of the most mechanically gifted AD carries in the world, known for his play on late-game hyperscalers such as Vayne and Lucian.
+					</p>
+				</div>
+			</a>
+		
+			<a href="#top" class="smoothScroll">
+				<div class="pin">
+					<img src="img/kiwikid.jpg" />
+					<p>
+						Kiwikid is the only remaining member of the original Dignitas roster. While he isn't known for flashy plays and huge highlight reels, Kiwikid is an outstandingly consistent player who makes few mistakes and works behind the scenes to help carry Dignitas to victory.
+					</p>
+				</div>
+			</a>
+		</div>
+	</div>
+
+ 	<!-- The main page content (just filler for this demo) -->
 	 <div id="body-text">
 	    <p>
 	    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porta justo in tellus porttitor non placerat dui pulvinar. Aliquam erat volutpat. Morbi ullamcorper libero sit amet tortor porta iaculis. Duis sit amet diam dolor. Mauris bibendum pharetra justo, sed ornare arcu scelerisque vitae. Integer molestie dignissim lacinia. Etiam sagittis consectetur iaculis. Pellentesque fringilla nulla at tortor dictum lobortis.
