Added a few working links

--- a/root/index.html
+++ b/root/index.html
@@ -45,13 +45,17 @@
 			<div id="nav">
 				<ul>
 					<li><a href="#top" class="smoothScroll">Main Page</a></li>
-					<li><a href="#" class="smoothScroll">Demo Link 2</a></li>
+					<li><a href="#profile-break" class="smoothScroll">Player Profiles</a></li>
 					<li><a href="#" class="smoothScroll">Demo Link 3</a></li>
 					<li><a href="#" class="smoothScroll">Demo Link 4</a></li>
 				</ul>
 				<br class="clearLeft" />
 			</div>
 		</div>
+	</div>
+
+	<div id="profile-break">
+		<br/>
 	</div>
 
 	<div id="player-profile-header">
@@ -154,6 +158,8 @@
 			</a>
 		</div>
 	</div>
+
+	<hr class="prof-sep">
 
  	<!-- The main page content (just filler for this demo) -->
 	 <div id="body-text">
