--- a/root/index.html
+++ b/root/index.html
@@ -330,6 +330,7 @@
 	<script src="js/d3.min.js"></script>
 	<script src="js/d3.tip.js"></script>
 	<script src="js/radar-chart.js"></script>
+	<script src="js/map-visualizations.js"></script>
 	<script src="js/toy-data.js"></script>
 	<script src="js/main.js"></script>
 
