commit for pull

--- a/root/index.html
+++ b/root/index.html
@@ -86,7 +86,7 @@
 				</div>
 			</a>
 		
-			<a href="#top" class="smoothScroll">
+			<a href="profiles/bjergsen.html" class="smoothScroll">
 				<div class="pin">
 					<img src="img/bjergsen.jpg" />
 					<p>
