set stuff up for time region map

--- a/root/index.html
+++ b/root/index.html
@@ -187,7 +187,8 @@
 				<option value="adc">ADC</option>
 				<option value="sup">Support</option>
 			</select>
-			<input type="button" id="btnRenderMap" value="Load Visualization" onclick="renderMapOutput()">
+			<input type="button" id="btnRenderMapTimeAll" value="Load Visualization - Time Al" onclick="renderMapOutputTimeAll()">
+			<input type="button" id="btnRenderMapTimeRegion" value="Load Visualization - Time Region" onclick="renderMapOutputTimeRegion()">
 		</div>
 
 		<div class="row">
