--- a/root/index.html
+++ b/root/index.html
@@ -192,7 +192,12 @@
 		</div>
 
 		<div class="row">
-			<div id="map-container"></div>
+			<div class="col-md-6">
+				<div id="map-container"></div>
+			</div>
+			<div class="col-md-6">
+				<div id="map-radar-container"></div>
+			</div>
 		</div>
 
 
