New text elements and minor changes

--- a/root/index.html
+++ b/root/index.html
@@ -51,6 +51,38 @@
     </div>
 </div>
 
+<div id="viz-intro-header">
+    <h1>Visualization Introduction</h1>
+    <!--<h5>Click on a description for a link to a complete player profile</h5>-->
+</div>
+
+<div id="viz-intro">
+    <p>
+        League of Legends is an incredibly strategic game. One can learn strategy and tactics by observing the patterns and playstyles of professional and semi-professional players. Our visualization allows people to access and interface with pro players data so that regular players can learn more efficiently.
+    </p>
+    <p>
+        Search through our database for your favorite player or pick from our suggested profiles below.
+        For our interactive map, input the player's ingame-tag ("Quoted-Name" in the Player Profiles section), select a role (select their appropriate role for best the representative data) to view the map movements.
+        For our radar chart plot, input up to 3 ingame-tags to compare the players against each other. The red polygon always represents the mean data of all the players in our dataset.
+    </p>
+</div>
+
+<div id="glossary-header">
+    <h1>Glossary of Terms</h1>
+</div>
+
+<div id="glossary">
+    <p>
+        <b>Roles:</b> League of Legends are divided into 5 roles. TOP, JUNGLE, MID, ADC and SUPPORT. Similar to other sports, each role has a unique and specialized playstyle. A player specializes in one role and sticks to it. As a result, a MID player will likely have better statistics playing the MID role than playing the SUPPORT role.
+    </p>
+    <p>
+        <b>Gold:</b> Killing minions and other players in League of Legends earns the player gold. You can use your gold earned to buy weapons and upgrades for your champion. One metric of a player's skill is how much gold a player has earned in a game.
+    </p>
+    <p>
+        <b>Kill-Death-Ratio (K/D/A):</b> Throughout the course of a game, a player will rack up kills and accumulate deaths. One metric of a player's skill is the kill-death ratio.
+    </p>
+</div>
+
 <div id="profile-break">
     <br/>
 </div>
@@ -67,7 +99,7 @@
         <a href="#top" class="smoothScroll">
             <div class="pin">
                 <img src="img/double.jpg" />
-                <h4>Doublelift "Doublelift"</h4>
+                <h4>Doublelift "Doublelift" (ADC)</h4>
                 <p>
                     Doublelift is an AD carry who currently plays for Team Solo Mid. Widely regarded as one of the world's best, Doublelift is also noted for his controversial personality - he loves to make matchups more exciting by trash-talking.
                 </p>
@@ -77,7 +109,7 @@
         <a href="#top" class="smoothScroll">
             <div class="pin">
                 <img src="img/sneaky.jpg" />
-                <h4>Sneaky "C9 Sneaky"</h4>
+                <h4>Sneaky "C9 Sneaky" (ADC)</h4>
                 <p>
                     Sneaky currently plays AD carry for Cloud 9, an NA team that enjoyed great success their first year in the LCS. Sneaky doesn't pander much to the media, but says all that needs to be said through his continually dominant performance as one of the strongest ADCs in NA.
                 </p>
@@ -87,7 +119,7 @@
         <a href="profiles/bjergsen.html" class="smoothScroll">
             <div class="pin">
                 <img src="img/bjergsen.jpg" />
-                <h4>Bjersen "mid is sucess"</h4>
+                <h4>Bjersen "mid is sucess" (MID)</h4>
                 <p>
                     Bjergsen, the Danish import who moved from the Copenhagen Wolves to Team Solo Mid in 2014, has been widely heralded as one of the best midlaners in the world. His aggressive playstyle and tendency to dominate midlane across a variety of lane matchups has earned him a reputation for strong showings on assassins such as Zed and Leblanc.
                 </p>
@@ -97,7 +129,7 @@
         <a href="#top" class="smoothScroll">
             <div class="pin">
                 <img src="img/huni.jpeg" />
-                <h4>Huni "ADC Huni"</h4>
+                <h4>Huni "ADC Huni" (TOP)</h4>
                 <p>
                     After starting his career at Samsung in the Korean LCK, Huni moved to Europe where he enjoyed a wildly successful 2015 Season with Fnatic. After a strong run at worlds, Fnatic disbanded and Huni found himself once again relocated, this time to a fledgling Immortals team in North America.
                 </p>
@@ -107,7 +139,7 @@
         <a href="#top" class="smoothScroll">
             <div class="pin">
                 <img src="img/darshan.jpg" />
-                <h4>Darshan "ZionSpartan"</h4>
+                <h4>Darshan "ZionSpartan" (TOP)</h4>
                 <p>
                     Darshan (sometimes better known by his old alias, ZionSpartan) currently plays for CLG. He was one of the first players to popularize the top lane carry meta which has since been replaced largely by tanks. Every once in a while he will still be seen playing his signature champions such as Jax and Nasus.
                 </p>
@@ -117,7 +149,7 @@
         <a href="#top" class="smoothScroll">
             <div class="pin">
                 <img src="img/rush.jpg" />
-                <h4>Rush "Rush"</h4>
+                <h4>Rush "Rush" (JUNGLE)</h4>
                 <p>
                     Rush moved from Korea to join Cloud 9 and was met with awe as he climbed to the very top of the NA solo queue ladder within the first week, abusing is absurdly aggressive early game on champions such as Lee Sin and Nidalee. He has been a successful replacement for Cloud 9's popular jungler Meteos, who retired last year.
                 </p>
@@ -127,7 +159,7 @@
         <a href="#top" class="smoothScroll">
             <div class="pin">
                 <img src="img/wildTurtle.jpg" />
-                <h4>WildTurtle "WildTurtle"</h4>
+                <h4>WildTurtle "WildTurtle" (ADC)</h4>
                 <p>
                     WildTurtle received harsh criticism towards the end of the 2015 split. Many believed that he had underperformed compared to the rest of Team Solo Mid. His move to Immortals in 2016 turned out to be exactly the right move to silence those critics. Since the move he has been an integral part of the Immortal's 17-1 2016 spring split.
                 </p>
@@ -137,7 +169,7 @@
         <a href="#top" class="smoothScroll">
             <div class="pin">
                 <img src="img/impact.jpg" />
-                <h4>Impact "Impact"</h4>
+                <h4>Impact "Impact" (TOP)</h4>
                 <p>
                     After winning the world championship with Korean giants SK Telecom in 2014, Impact moved to North American Team Impulse. Despite TIP's moderate success, Impact decided to stay in NA after the 2015 season and now plays with new team NRG eSports. Despite consistent strong performances on carry top laners (most notably Fiora), Impact has been criticized for his failure to smoothly transition into the tank meta that we have seen since the start of the 2016 season.
                 </p>
@@ -147,7 +179,7 @@
         <a href="#top" class="smoothScroll">
             <div class="pin">
                 <img src="img/piglet.jpg" />
-                <h4>Piglet "GodPiglet"</h4>
+                <h4>Piglet "GodPiglet" (ADC)</h4>
                 <p>
                     A former teammate of Impact on SK Telecom, Piglet followed Impact's lead and moved to North America after the dissolution of the team. Piglet is one of the most mechanically gifted AD carries in the world, known for his play on late-game hyperscalers such as Vayne and Lucian.
                 </p>
@@ -157,7 +189,7 @@
         <a href="#top" class="smoothScroll">
             <div class="pin">
                 <img src="img/kiwikid.jpg" />
-                <h4>KiWiKiD "KiWiKiD"</h4>
+                <h4>KiWiKiD "KiWiKiD" (SUPPORT)</h4>
                 <p>
                     Kiwikid is the only remaining member of the original Dignitas roster. While he isn't known for flashy plays and huge highlight reels, Kiwikid is an outstandingly consistent player who makes few mistakes and works behind the scenes to help carry Dignitas to victory.
                 </p>
@@ -171,7 +203,7 @@
 <!-- TODO talk to alex about maybe making everything in a container? depends on how much bootstrapiness we want -->
 <div class="container">
     <div class="row">
-        <h1 id="map" class="section-title">Animated Map</h1>
+        <h1 id="map" class="section-title">Interactive Map</h1>
     </div>
 
     <div class="row map-player-select">
