Started heatmap-vis

--- a/root/index.html
+++ b/root/index.html
@@ -243,6 +243,8 @@
     <input type="text" id="test_3" value="Summoner Name">
     <input type="button" id="btnRenderRadar" value="CLICK ME" onclick="renderRadarOutput()">
     <div id="radar-chart-container"></div>
+
+    <div id="heatmap-container"></div>
 </div>
 
 <!-- The main page content (just filler for this demo) -->
@@ -263,8 +265,9 @@
 <script src="js/radar-chart.js"></script>
 <script src="js/radar-vis.js"></script>
 <script src="js/map-vis.js"></script>
+<script src="js/heatmap-vis.js"></script>
 <script src="js/main.js"></script>
->>>>>>> refs/remotes/origin/master
+
 
 </body>
 </html>
